Restore white-space: pre-wrap to fix display of duplicate whitespace

--- a/main/webapp/modules/core/styles/views/data-table-view.css
+++ b/main/webapp/modules/core/styles/views/data-table-view.css
@@ -216,6 +216,7 @@ div.data-table-cell-content {
   line-height: 1.2;
   color: #222;
   position: relative;
+  white-space: pre-wrap;
   overflow-wrap: anywhere;
 }
 
